# research-snn-vs-ann-in-rl

./: .gitignore  README.md  dvc.lock.dvc  dvc.yaml  notes.md  poetry.toml  pyproject.toml
docs/: ESN.md  LSM-topological_analysis.md  STDP.md  datasets.md  experiments.md  methods.md  poster_AIFM.md  tuning_notes.md
docs/LSM/: ReservoirComputing.bib
examples/: experimentkit_gen_time_series.py  partial_raster_plot.py  raster_plot.py
experimentkit/: funx.py  metricsreport.py  visualization.py
experimentkit/generators/: time_series.py
experimentkit_in/: __init__.py  collections_utils.py  environment.py  funx.py  logger_config.py  metricsreport.py  monitor.py  reporting.py  visualization.py
experimentkit_in/generators/: time_series.py
experiments/: README.md
experiments/01-g2_RNN_ts/: README.md
experiments/01-g2_RNN_ts/nb&flows/: g2_RNN_ts.py
experiments/02-LIF/nb&flows/: class_ts-dev.py  class_ts.py  data_analysis.py
experiments/02-LIF/src02/: funx.py
experiments/03-LIF-STDP/: README.md
experiments/03-LIF-STDP/nb&flows/: v1.py  v2-stdp.py
experiments/04-LIF-STDP-ts/: README.md
experiments/04-LIF-STDP-ts/nb&flows/: x_LIF_ts_bkp.py
experiments/04-LIF-STDP-ts/tests/: test_class_ts.py
experiments/05-ESN_ts/: README.md
experiments/05-ESN_ts/examples/: ESN_regression.py
experiments/05-ESN_ts/nb&flows/: test_tryESN_1.py
experiments/06-FC-STDP/: README.md
experiments/06-FC-STDP/nb&flows/: 00-FC-training.py  (+12 more)
experiments/07-ESN-STDP/: README.md  sweep-bayesoptim.yaml  sweep.yaml
experiments/07-ESN-classification/: 01-MNIST.py
experiments/08-ESN-STDP-MLops/: .gitignore  README.md  params.yaml  params.yaml.dvc
experiments/08-Neurons_Characteristics/: 01-Lapique-beta.py  02-Leaky-beta.py
experiments/09-LIF-understand/: README.md
experiments/10-LIFsnet/: README.md
experiments/11-LSTM/: README.md
experiments/14-LSM-rope-analysis/: README.md
experiments/ESN_ts/: class_ts.py  try-iESN.py  try__ESN_2__regression.py
experiments/LIF/: README.md  class_imgs.py  class_ts-dev.py  class_ts.py  data_analysis.py
experiments/LIF-STDP/: README.md  v1.py  v1_continous_dyn.py  v2-stdp.py  v2.py
experiments/LIF-STDP-ts/: LIF-STDP-ts.py  class_ts__dev.py  x_LIF_ts_bkp.py
experiments/g2_RNN_ts/: g2_RNN_ts.py
experiments/g2nd-RNN-ts/: g2nd_RNN_ts.py
experiments/snnToch_stdp/: chevalier-stdp.py  stdp-tut1.py  test_stdp-1.py  tut_utils.py
flows/: README.md  learn_oja.py  test_print.py  try-ESN.py  try-NoSTDP-on_2nd---.py  try-NoSTDP-on_2nd.py  try-STDP-on_LIF-training.py  try-STDP-on_LIF-training_.py  try-STDP-on_LIF.py  try-STDP-on_raster.py  try__STDP_on_LIF__training_.py
stdp/: estimators.py  funx.py  spike_collectors.py  stdp-impl_2.py  tut_utils.py
stdp/tests/: test_stdp.py
streamlit_apps/: README.md
streamlit_apps/1-lapicque/: app.py
streamlit_apps/2-LIF-pair/: README.md  app.py  tut_utils.py
streamlit_apps/3-Rec-LIF-net/: README.md  app.py
tests/: spike_collectors.py  test_spike_collectors.py  test_stdp.py  test_viz.py
tests/experimentkit/: test_ekit_funx.py  test_environment.py  test_funx.py  test_metricsreport.py
tests/flows/: test__try__STDP_on_LIF__training_.py
tests/stdp/: test_estimators.py  test_funx.py  test_spike_collectors.py  test_stdp.py
(+197 files in other folders)
