[project]
name = "research-snn-vs-ann-in-rl"
version = "0.1.0"


[tool.poetry]
name = "research-snn-vs-ann-in-rl"
version = "0.1.0"
description = "Comparison of economics of choices between SNN and ANN in RL"
authors = ["gianfa <gian.angelini@hotmail.com>"]
packages = [
    {include = "std"},
    {include = "experimentkit"},
]
exclude = [
    "flows",
    "experiments",
    "streamlit_apps",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"

matplotlib = "^3.5.3"
numpy = "^1.23.2"
pandas = "^1.4.4"
snntorch = "^0.5.3"
torchvision = "^0.13.1"
networkx = "^2.8.7"
scikit-learn = "^1.2.0"
torchmetrics = "^0.11.0"
seaborn = "0.12.0"
jupyter = "^1.0.0"
ipykernel = "^6.20.2"
daft = "^0.1.2"
pyqt6 = "^6.4.1"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
jupyter = "^1.0.0"
black = "^22.8.0"
streamlit = "*"
watchdog = "*"

[build-system]
# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/#build-process
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools]
packages = [
    "std",
    "experimentkit"
]